...
    <!--  Tab titles  -->
    <string name="tab_title_generate">Generate</string>
    <string name="tab_title_simulation">Simulate</string>
    <string name="tab_title_stat">Stat</string>

    <!--  Copy numbers to clipboard  -->
    <string name="menu_copy_to_clipboard">Copy to Clipboard</string>
    <string name="toast_numbers_copied_to_clipboard">Numbers copied to clipboard</string>

    <!--  MainViewPagerFragment  -->
    <string name="menu_title_history">History</string>

    <!--  RandomNumberFragment  -->
...
    <string name="past_match_month_november">Nov</string>
    <string name="past_match_month_december">Dec</string>

    <!--  SimulationFragment  -->
    <string name="simulate_button">Simulate</string>
    <string name="simulation_results_button">Results</string>
    <string name="start_simulation_text">Winning Numbers</string>
    <string name="checkbox_fix_winning_numbers_text">Fix Winning Numbers</string>
    <string name="num_of_tickets_hint"># of Tickets</string>
    <string name="num_of_tickets_warning_dialog_title">Number of Tickets</string>
    <string name="num_of_tickets_warning_dialog_message_no_number">Please enter number of tickets to generate.</string>
    <string name="num_of_tickets_warning_dialog_message_greater_than_0">Please enter a number greater than 0.</string>
    <string name="dialog_ok_button">OK</string>

    <!--  StatFragment  -->
    <string name="toggle_pie_chart">Pie</string>
    <string name="toggle_bar_chart">Bar</string>
    <string name="clear_graph_data_confirm_dialog_message">Are you sure you want to clear data for %1$s?</string>
    <string name="clear_all_graph_data_confirm_dialog_message">Are you sure you want to clear data for all charts?</string>
...
    <string name="match_count_five_bonus">5+</string>
    <string name="match_count_six">6</string>
    <string name="match_count_six_bonus">6+</string>
    <string name="match_count_seven">7</string>

    <!--  TicketHistoryFragment  -->
    <string name="ticket_history_fragment_title">Ticket History</string>
    <string name="menu_title_clear">Clear</string>
    <string name="clear_data_confirm_dialog_title">Clear Ticket History</string>
    <string name="clear_data_confirm_dialog_message">Are you sure you want to clear history?</string>
    <string name="clear_data_confirm_dialog_positive_button">Clear</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="info_dialog_title">Info</string>
    <string name="info_dialog_message">10,000 tickets can be stored in database\n\nShort names:\n - PB = Powerball \n - MM = Mega Millions \n - MAX = Lotto Max \n - 649 = Lotto 649</string>
    <string name="info_dialog_positive_button">OK</string>
</resources>

