<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/clear_history"
        android:title="@string/menu_title_clear"
        app:showAsAction="always"/>

    <item
        android:id="@+id/history_info"
        android:title=""
        android:icon="@drawable/ic_outline_info_24"
        app:showAsAction="always"/>
</menu>